# puzzles

./: generate-api-file.sh
.github/workflows/: dockerimage.yml
api/: api.json  swagger.json  users.json
backend/: CHANGELOG.md  Dockerfile  README.md  backend.cabal  backend.prof.1  backend.prof.2  stack.yaml
backend/app/: Main.hs
backend/src/: Prng.hs  Server.hs  Swagger.hs  Todo.hs
backend/src/Effects/: KVS.hs  PuzzleCRUD.hs  Random.hs  Shuffle.hs
backend/src/Puzzles/: TrainTracks.hs
backend/src/Server/: Crossword.hs  Puzzles.hs  Puzzles.hs.bak  TrainTracks.hs
frontend/: package.json
frontend/public/: index.html
frontend/scripts/: munge-swagger.js  munge-swagger.ts
frontend/src/: App.css  App.js
frontend/src/api-hooks/: index.tsx  petstore.tsx
frontend/src/components/generic/: Grid.tsx
frontend/src/components/puzzles/train-tracks/: Cell.tsx  TrackCounter.tsx  TrainTracks.module.css  TrainTracksApp.tsx  TrainTracksGame.tsx  TrainTracksGrid.tsx  game.tsx  gameHooks.tsx  utils.tsx
